fix: all problems with appheader on mobile
- add available for work on top
- remove necessary btn from appheader on mobile
- add nerd conect btn

--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -13,6 +13,10 @@
   line-height: 20px;
   color: #e2eaf1;
   margin-right: $spacing-2;
+
+  @include mobile {
+    font-size: 14px !important;
+  }
 }
 
 .switch {
@@ -20,6 +24,10 @@
   display: inline-block;
   width: 28px;
   height: 16.5px;
+
+  @include mobile {
+    width: 50px;
+  }
 }
 
 .switch input {
